--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>TEST</title>
-    <script type="text/javascript">
-      import contributions from './src/main.js';
-      document.body.append(contributions);
-    </script>
-  </head>
-  <body>
-    
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>TEST</title>
+  <script type="text/javascript">
+    import contributions from './src/main.js';
+    document.body.append(contributions); // TODO: add node support
+  </script>
+</head>
+
+<body>
+
+</body>
+
 </html>
